force-app/src/objects/cpm__Guided_Matching_Setup__c.object
<CustomObject>
    <fields>
        <fullName>cpm__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Job_Size__c</fullName>
        <defaultValue>200</defaultValue>
        <label>Job Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpm__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Report_Sub_Type__c</fullName>
        <label>Report Sub Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Report_Type__c</fullName>
        <label>Report Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Rules__c</fullName>
        <label>Rules</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpm__Target__c</fullName>
        <externalId>true</externalId>
        <label>Target</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Guided Matching Setup</label>
    <nameField>
        <label>Guided Matching Setup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Guided Matching Setups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>